# async-slot

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  sync.rs  unsync.rs
tests/: slot-unsync.rs  slot.rs
